[gd_scene load_steps=17 format=3 uid="uid://ckbe6draoen0x"]

[ext_resource type="Script" path="res://main.gd" id="1_xvgge"]
[ext_resource type="Script" path="res://addons/tiltfive/T5Manager.gd" id="2_dibvp"]
[ext_resource type="PackedScene" uid="uid://dl3mv76qkuscf" path="res://scenes/ExampleXRRig.tscn" id="3_8a4oa"]
[ext_resource type="Script" path="res://scenes/SelectableBody.gd" id="4_wxdse"]
[ext_resource type="Material" uid="uid://blq3i2qbhoyum" path="res://materials/highlight_overlay_material.tres" id="5_2i4f6"]

[sub_resource type="BoxMesh" id="BoxMesh_gbwc2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iuako"]

[sub_resource type="BoxShape3D" id="BoxShape3D_pbofy"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_70r0u"]
albedo_color = Color(0, 1, 0.215686, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_1q0d0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pftuj"]
albedo_color = Color(0.980392, 0.815686, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dji1h"]
albedo_color = Color(0.176471, 0.14902, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_00c7w"]
albedo_color = Color(0, 0.419608, 0.462745, 1)

[sub_resource type="BoxMesh" id="BoxMesh_qm7rn"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0arwu"]
albedo_color = Color(0.862745, 0, 0.0235294, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qrhlq"]
albedo_color = Color(0.741176, 0, 0.686275, 1)

[node name="Main" type="Node3D"]
script = ExtResource("1_xvgge")

[node name="T5Manager" type="Node" parent="." node_paths=PackedStringArray("start_location")]
script = ExtResource("2_dibvp")
glasses_scene = ExtResource("3_8a4oa")
start_location = NodePath("../T5Gameboard")

[node name="T5Gameboard" type="T5Gameboard" parent="."]
content_scale = 16.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.952497, -0.0534809, 0.299816, -0.283211, 0.206458, 0.936572, -0.111988, -0.976993, 0.181504, 2.31774, 1.62798, 0)

[node name="Boxes" type="Node3D" parent="."]

[node name="CenterBody" type="StaticBody3D" parent="Boxes"]
script = ExtResource("4_wxdse")
grow_amount = 0.05

[node name="Center" type="MeshInstance3D" parent="Boxes/CenterBody"]
material_overlay = ExtResource("5_2i4f6")
mesh = SubResource("BoxMesh_gbwc2")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_iuako")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boxes/CenterBody"]
shape = SubResource("BoxShape3D_pbofy")

[node name="PositiveYBody" type="StaticBody3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
script = ExtResource("4_wxdse")
grow_amount = 0.05

[node name="Positive Y" type="MeshInstance3D" parent="Boxes/PositiveYBody"]
mesh = SubResource("BoxMesh_gbwc2")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_70r0u")

[node name="Label3D" type="Label3D" parent="Boxes/PositiveYBody/Positive Y"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0.922618, 0)
pixel_size = 0.01
text = "Up (Y+)"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boxes/PositiveYBody"]
shape = SubResource("BoxShape3D_1q0d0")

[node name="Positive Y2" type="MeshInstance3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0)
mesh = SubResource("BoxMesh_gbwc2")
surface_material_override/0 = SubResource("StandardMaterial3D_pftuj")

[node name="Positive Z" type="MeshInstance3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.5)
mesh = SubResource("BoxMesh_gbwc2")
surface_material_override/0 = SubResource("StandardMaterial3D_dji1h")

[node name="Label3D" type="Label3D" parent="Boxes/Positive Z"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 1.13267)
pixel_size = 0.01
text = "Backwards (Z+)"

[node name="Negative Z" type="MeshInstance3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)
mesh = SubResource("BoxMesh_gbwc2")
surface_material_override/0 = SubResource("StandardMaterial3D_00c7w")

[node name="Positive X" type="MeshInstance3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0)
mesh = SubResource("BoxMesh_qm7rn")
surface_material_override/0 = SubResource("StandardMaterial3D_0arwu")

[node name="Label3D" type="Label3D" parent="Boxes/Positive X"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 1.3681, 0, 0)
pixel_size = 0.01
text = "Right (X+)"

[node name="Negative X" type="MeshInstance3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 0)
mesh = SubResource("BoxMesh_qm7rn")
surface_material_override/0 = SubResource("StandardMaterial3D_qrhlq")

[node name="SpectatorCam" type="Camera3D" parent="."]
transform = Transform3D(0.670983, -0.138786, 0.728368, 0, 0.982326, 0.187176, -0.741472, -0.125592, 0.659125, 14.0459, 4.9572, 12.9908)
cull_mask = 3

[connection signal="xr_rig_was_added" from="T5Manager" to="." method="_on_t5_manager_xr_rig_was_added"]
[connection signal="xr_rig_will_be_removed" from="T5Manager" to="." method="_on_t5_manager_xr_rig_will_be_removed"]
